--- a/rolin.html
+++ b/rolin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>售價計算器（新增清除輸入按鈕）</title>
+    <title>售價計算器</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -117,7 +117,7 @@
 <body>
 
 <div class="calculator">
-    <h2>售價計算器（新增清除輸入按鈕）</h2>
+    <h2>售價計算器</h2>
     <label for="exchangeRate">匯率（輸入一次即可）：</label>
     <input type="number" id="exchangeRate" placeholder="輸入匯率" step="0.01">
 
